--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "vchat\\inc\\": "inc/"
+            "VChat\\Inc\\": "inc/"
         }
     }
 }
